--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~bootstrap/dist/css/bootstrap.css";
+@import "~font-awesome/css/font-awesome.css";
+.centered {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+ /* bring your own prefixes */
+ transform: translate(-50%, -50%);
+}
